# BaumankaCoin

./: .clang-format  .gitignore  CMakeLists.txt  FindBOTAN.cmake  clang-format.sh  main.cpp  miner.cpp  miner.hpp  network.h  wallet.cpp  wallet.h
ad_patresd/: CMakeLists.txt  ad_patresd.cpp  ad_patresd.hpp  main.cpp  peer.cpp  peer.hpp  server.cpp  server.hpp
blockchain/: CMakeLists.txt  Input.cpp  Input.h  block.cpp  block.h  blockchain.cpp  blockchain.h  output.cpp  output.h  tail.cpp  tail.h  transaction.cpp  transaction.h
blockchain/tx_cmd/: CMakeLists.txt  addInput.cpp  addInput.h  addTail.cpp  addTail.h  cleaner.cpp  cleaner.h  command.cpp  command.h  receiver.cpp  receiver.h  removeInput.cpp  removeInput.h  removeTail.cpp  removeTail.h  signer.cpp  signer.h
cli/: CMakeLists.txt  main.cpp
network/: CMakeLists.txt  connection.cpp  connection.hpp  network.cpp  network.hpp  server.cpp  server.hpp
network/messages/: CMakeLists.txt  block.cpp  block.hpp  getblocks.cpp  getblocks.hpp  inv.cpp  inv.hpp  message.cpp  message.hpp  net_addr.cpp  net_addr.hpp  tx.cpp  tx.hpp  version.cpp  version.hpp
server/: CMakeLists.txt  ad_patresd.cpp  ad_patresd.hpp  main.cpp  message.cpp  message.hpp  peer.cpp  peer.hpp  server.cpp  server.hpp
serverd/: CMakeLists.txt  connection.cpp  connection.hpp  fpid.cpp  fpid.hpp  main.cpp  miner.cpp  miner.hpp  server.cpp  server.hpp
serverd/blockchain/: CMakeLists.txt  Input.cpp  Input.h  block.cpp  block.h  blockchain.cpp  blockchain.h  output.h  tail.cpp  tail.h  transaction.cpp  transaction.h  wallet.cpp  wallet.h
serverd/blockchain/tx_cmd/: addInput.cpp  addTail.cpp  cleaner.h  command.h  receiver.cpp  receiver.h  removeInput.h  signer.cpp
serverd/messages/: CMakeLists.txt  block.cpp  block.hpp  getblocks.cpp  getblocks.hpp  inv.cpp  inv.hpp  message.cpp  message.hpp  net_addr.cpp  net_addr.hpp  tx.cpp  version.cpp  version.hpp
wallet_prototype/: CMakeLists.txt  ConsoleApplication7.cpp  ConsoleApplication7.vcxproj  ConsoleApplication7.vcxproj.filters  Input.cpp  Input.h  ReadMe.txt  block.cpp  blockchain.cpp  blockchain.h  output.cpp  output.h  stdafx.cpp  tail.cpp  tail.h  transaction.cpp  transaction.h  wallet.cpp  wallet.h
